# lather-webstore

./: README-WEBSTORE.md
irshados-backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
irshados-backend/api/: admin.py  middleware.py  models.py  pagination.py  permissions.py  serializers.py  tasks.py  tenant.py  urls.py  views.py
irshados-backend/api/management/commands/: bootstrap_dev_tenants.py
irshados-backend/api/migrations/: 0001_initial.py  0002_permission_role_tenant_and_more.py  0003_enable_rls.py  0004_blacklistedtoken_auditlog_invitation.py  0005_pricelist_productcategory_product_productvariant_and_more.py  0006_stockmovement_stockmovementline_inventoryledgerentry_and_more.py  0007_purchaseorder_purchasebill_purchaseorderline_and_more.py  0008_salesorder_salesinvoice_deliverynote_salesorderline_and_more.py  0009_posshift_possale_posofflinequeueitem_posreceipt_and_more.py  0010_kitchenorderticket_kitchendisplayevent_menu_menuitem_and_more.py
irshados-backend/api/services/: inventory.py  pos.py  purchasing.py  restaurant.py  sales.py
irshados-backend/api/tests/: test_authentication.py  test_erp_domain.py  test_tenancy.py
irshados-backend/celery/: __init__.py
irshados-backend/config/: celery.py  settings.py  urls.py
irshados-backend/rest_framework_simplejwt/: __init__.py  authentication.py  settings.py  tokens.py
irshados-backend/rest_framework_simplejwt/token_blacklist/: __init__.py
irshados-frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  (+8 more)
(+60 files in other folders)
