[project]
name = "irshados-backend"
version = "0.1.0"
requires-python = ">=3.12"
description = "IrshadOS Django backend"
readme = "README.md"
dependencies = []

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["api", "config"]
combine_as_imports = true

[tool.ruff]
line-length = 88
src = ["api", "config"]
include = ["pyproject.toml", "api/**/*.py", "config/**/*.py", "tests/**/*.py"]
exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "ARG",
    "DJ",
]
ignore = ["DJ001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true
ignore_missing_imports = false
warn_return_any = true
warn_unused_configs = true

[mypy.plugins.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "--ds=config.settings --strict-markers --disable-warnings"

[tool.coverage.run]
branch = true
source = ["api"]

[tool.coverage.report]
show_missing = true
skip_empty = true
